Push an attempt to solve the issue of the navigation contrast

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ html {
 }
 
 .nav a span {
-  border-bottom: .3rem solid #bea59b;
+  border-bottom: .3rem solid #023495;
 }
 
 .nav a:hover span,
